<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Nom de l'app -->
    <string name="app_name">reAlimenta</string>
    <!-- Navigation bar -->
    <string name="title_activity_nav">Apartats</string>
    <string name="action_settings">Opcions</string>
    <string name="Ofertes">Ofertes</string>
    <string name="Botigues">Botigues</string>
    <string name="Formulari">Formulari</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="Eines">Eines</string>
    <string name="Comparteix">Comparteix</string>
    <string name="Envia">Envia</string>
    <string name="title_placeholder">Títol</string>
    <string name="news_placeholder">Notícies</string>
    <string name="sports_info_placeholder">Informació</string>
    <!-- Formulari -->
    <string name="trato">Quin tracte et solen donar?</string>
    <string name="procedencia">Elecció dels llocs de procedència dels aliments:</string>
    <string name="guardar">Guardar</string>
    <string name="fruteria">Fruiteria</string>
    <string name="panaderia">Forn de pa</string>
    <string name="supermercado">Supermercat</string>
    <string name="preguntas_frecuentes" translatable="false">FAQs</string>
    <string name="mal_trato">Tracte dolent</string>
    <string name="hombre_mujer">Home/Dona</string>
    <string name="sexo">Gènere:</string>
    <string name="buen_trato">Bon tracte</string>
    <!-- Login -->
    <string name="login" translatable="false">Login</string>
    <string name="registre">Registre</string>
    <string name="descriptionActivity_login">Aquest és l\'apartat de login</string>
    <string name="descriptionLogin">Fer login amb les dades introduïdes</string>
    <string name="descriptionRegistre">Anar al registre</string>
    <!-- Registre -->
    <string name="registrar">Registra\'t</string>
    <string name="descriptionActivity_registre">Aquest és l\'apartat de registre</string>
    <string name="descriptionRegistrar">Registra\'t</string>
    <!-- Login i Registre -->
    <string name="email">Email</string>
    <string name="password">Contrasenya</string>
    <string name="descriptionLogo">Logo de l\'aplicació</string>
    <string name="descriptionGoogle">Logo Google</string>
    <string name="descriptionFacebook">Logo Facebook</string>
    <string name="descriptionTwitter">Logo Twitter</string>
    <string name="communicate">Comunica</string>
    <!-- Missatges login i registre -->
    <string name="incorrecte">Usuari i/o contrasenya incorrectes !!</string>
    <string name="buit">Error, falta omplir algun camp</string>
    <string name="regCorrrecte">Registre correcte</string>
    <string name="notEmail">L\'adreça introduïda no és un email</string>
    <string name="title_oferta_concreta">Oferta Concreta</string>
    <string name="enrere">Enrere</string>
    <string name="galeria">Galeria</string>
    <string name="send">Envia</string>
    <string name="share">Comparteix</string>
    <string name="tools">Eines</string>
    <string name="slideshow" translatable="false">slideshow</string>
    <string name="t_tol">Títol</string>
    <string name="descripci">Descripció</string>
    <string name="telefono" translatable="false">telefon</string>
    <string name="nombre" translatable="false">nom</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="RegistreCorrecte">Registre Correcte.</string>
    <string name="AutentificacióFallida">Registre erroni</string>
    <string name="LoginCorrecte">Login correcte</string>
    <string name="escollirOpcio">S\'ha d\'escollir una tipus d\'usuari</string>
    <string name="introduirTotsElsCamps">Has d\'introduïr tots els camps.</string>
    <string name="creaOferta">Crea la Oferta</string>
    <string name="miraOfertesPropies">Mira ofertes pròpies</string>
    <string name="Donant">donant</string>
    <string name="ofertesPropies">Mira ofertes pròpies</string>
    <string name="crea_oferta">Crea oferta</string>
    <string name="titol">Títol</string>
    <string name="descripcio">Descripció</string>
    <string name="horari">Horari</string>
    <string name="puja_la_oferta">Puja la oferta</string>
    <string name="logout">Logout</string>
    <string name="nomNegoci">Nom del negoci</string>
    <string name="descripcioNegoci">Descripció del negoci</string>
    <string name="UbicacioNegoci">Ubicació del negoci</string>
    <string name="registreBotiga">Registre de la botiga</string>
    <string name="registre_botiga_incorrecte">Registre de la botiga incorrecte.</string>
    <string name="registre_botiga_correcte">Registre de la botiga correcte</string>
    <string name="modifica_oferta">Modifica oferta</string>
    <!-- Nom indrets -->
    <string-array name="indrets_nom">
        <item>Oferta 1</item>
        <item>Oferta 2</item>
        <item>Oferta 3</item>
        <item>Oferta 4</item>
    </string-array>
    <!-- Info indrets -->
    <string-array name="indrets_info">
        <item>Descripció de la primera oferta.</item>
        <item>Descripció de la segona oferta.</item>
        <item>Descripció de la tecera oferta.</item>
        <item>Descripció de la quarta oferta.</item>
    </string-array>
    <!-- Tipus usuari -->
    <string-array name="opcionsTipusUsuari">
        <item>ESCULL UN TIPUS USUARI</item>
        <item>Receptor</item>
        <item>Donant</item>
    </string-array>
    <string name="title_activity_tiendas_map">Mapa</string>
    <string name="sube_aqui_la_foto_de_la_tienda_donante">Puja aquí la foto de la botiga</string>
    <string name="sube_foto">Sube descripción y añade foto</string>
    <string name="fotografia">Fotografia</string>
    <string name="escollirTipusUsuari">Escollir tipus d\'usuari</string>
    <string name="fotos">Fotos</string>
    <string name="foto">Foto</string>
    <string name="Signa">Signa la petició perquè no es llenci el menjar sobrant de les botigues!</string>
    <string name="explicaci" tools:ignore="Typos">Esperem que gaudeixis de la nostra app. Com ja hauràs vist, nosaltres no demanem donacions ni cap altra forma de contribució al nostre projecte a més a més de fer-ne un bon ús. Però  si tens ganes de col·laborar, ajuda\'ns signant aquesta petició per tal de crear una llei que acabi amb el llançament de tones de menjar al dia.</string>
    <string name="signa_btn">Signa!</string>
    <string name="Enllaç" translatable="false">https://www.change.org/p/comisi%C3%B3n-europea-obliguen-a-los-supermercados-a-donar-toda-la-comida-que-le-sobra-a-entidades-sociales-y-ongs-lacomidanosetira</string>
    <string name="Change" translatable="false">Change</string>
    <string name="introdueix_les_dades_de_la_botiga_i_el_teu_comentari">Introdueix les dades de la botiga i el teu comentari.</string>
    <string name="descripcio2">Descripcio</string>
    <string name="t_tol_oferta">Títol oferta</string>
    <string name="descripci_oferta">Descripció oferta</string>
    <string name="horari_oferta">Horari oferta</string>
</resources>
