<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donant_miraofertespropies"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/ofertesPropies" />
        <item
            android:id="@+id/nav_donant_creaoferta"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/crea_oferta" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Comparteix" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Envia" />
        </menu>
    </item>

</menu>
