<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="cat.copernic.rodriguez.albert.m7t1.apartats_receptor.ofertes.OfertesFragment"
        android:label="@string/Ofertes"
        tools:layout="@layout/fragment_ofertes" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="cat.copernic.rodriguez.albert.m7t1.apartats_receptor.botigues.BotiguesFragment"
        android:label="@string/Botigues"
        tools:layout="@layout/fragment_botigues" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="cat.copernic.rodriguez.albert.m7t1.apartats_receptor.formulari.FormularioFragment"
        android:label="@string/Formulari"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="cat.copernic.rodriguez.albert.m7t1.apartats_receptor.tools.ToolsFragment"
        android:label="@string/Eines"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="cat.copernic.rodriguez.albert.m7t1.apartats_receptor.share.ShareFragment"
        android:label="@string/Comparteix"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="cat.copernic.rodriguez.albert.m7t1.apartats_receptor.send.SendFragment"
        android:label="@string/Envia"
        tools:layout="@layout/fragment_send" />

</navigation>