<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/descriptionActivity_registre"
    android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
    tools:context=".apartats_receptor.OfertaConcretaReceptor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/titol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/t_tol"
        android:inputType="text"
        android:text="@string/t_tol"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryTextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/descripcio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:hint="@string/descripci"
        android:inputType="text"
        android:text="@string/descripci"
        android:textColor="@color/colorPrimaryTextColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titol"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtHorari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:hint="@string/horari"
        android:inputType="text"
        android:text="@string/horari"
        android:textColor="@color/colorPrimaryTextColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcio"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtUbicacioNegoci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:hint="@string/UbicacioNegoci"
        android:inputType="text"
        android:text="@string/UbicacioNegoci"
        android:textColor="@color/colorPrimaryTextColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHorari"
        tools:targetApi="o" />

    <Button
        android:id="@+id/modificaOferta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/modifica_oferta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUbicacioNegoci" />
</androidx.constraintlayout.widget.ConstraintLayout>

